Add "jekyll" label to .asf.yaml (#472)

--- a/.asf.yaml
+++ b/.asf.yaml
@@ -31,8 +31,9 @@ github:
   labels:
     - accumulo
     - big-data
-    - asf-site
+    - website
     - hacktoberfest
+    - jekyll
   features:
     wiki: false
     issues: true
