--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -55,5 +55,7 @@ jobs:
         mv _site/ ../asf-site/output
         cd ../asf-site
         git add output
+        git config --global user.email "test@example.com"
+        git config --global user.name "test"
         git commit -m "Site publish from $(git rev-parse main)"
         git push
