--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -58,4 +58,4 @@ jobs:
         git config --global user.email "test@example.com"
         git config --global user.name "test"
         git commit -m "Site publish from $(git rev-parse main)"
-        git push
+        git push origin asf-site
