--- a/.github/workflows/commit.yaml
+++ b/.github/workflows/commit.yaml
@@ -49,6 +49,7 @@ jobs:
     - name: Site publish
       run: |
         git fetch origin asf-site
+        git fetch origin main
         git worktree add ../asf-site origin/asf-site
         cp -f .asf.yaml ../asf-site/.asf.yaml
         rm -rf ../asf-site/output
